Closed Bug 1788860 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::ipc::MessageChannel::~MessageChannel | mozilla::net::PSocketProcessChild::~PSocketProcessChild]

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox105 --- wontfix
firefox106 --- wontfix
firefox107 --- fixed

People

(Reporter: pascalc, Assigned: kershaw)

Details

(Keywords: crash, Whiteboard: [necko-triaged][necko-priority-queue])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/3f9c9901-711c-47f5-b2a6-449b40220902

MOZ_CRASH Reason: MOZ_CRASH(MessageChannel destroyed without being closed (mChannelState == ChannelConnected).)

Top 6 frames of crashing thread:

0 XUL mozilla::ipc::MessageChannel::~MessageChannel ipc/glue/MessageChannel.cpp:509
1 XUL mozilla::net::PSocketProcessChild::~PSocketProcessChild ipc/ipdl/PSocketProcessChild.cpp:129
2 XUL mozilla::net::SocketProcessImpl::~SocketProcessImpl netwerk/ipc/SocketProcessImpl.cpp:35
3 XUL XRE_InitChildProcess toolkit/xre/nsEmbedFunctions.cpp:745
4 plugin-container main ipc/app/MozillaRuntimeMain.cpp:96
5 None @0x0000000104fd5088 

Crashes started with build 20220901095452
Changelog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=af1fc1e6eb24573a5ebad1754b9d4917e934a5f9&tochange=9b193eeae94e203f831a59eb823de3de73ad3860

Component: IPC → Networking

I think this is not a regression, since the regression range seems not possible to cause this.
Moreover, there is no change to socket process code recently.
bwc, are you aware of any recent change at WebRTC side that could cause this?
Thanks.

Flags: needinfo?(docfaraday)

The crash rate seems not really high, so I'd change the severity to s3.

Severity: S2 → S3
Priority: -- → P2
Whiteboard: [necko-triaged]

Put this in our review queue to get this fixed soon.

Flags: needinfo?(docfaraday)
Whiteboard: [necko-triaged] → [necko-triaged][necko-priority-review]
Whiteboard: [necko-triaged][necko-priority-review] → [necko-triaged][necko-priority-queue]
Assignee: nobody → kershaw

I think this is a long standing issue, not regression.

Keywords: regression
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd1199f8bb58
Always close IPC channel in SocketProcessChild::CleanUp, r=necko-reviewers,dragana
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: