Bug 1788860 - Always close IPC channel in SocketProcessChild::CleanUp, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D159141